--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,11 +1,11 @@
 name: p2h Github Actions
-run-name: ${{ github.actor }} is testing out GitHub Actions for p2h 🚀
+run-name: GitHub Actions for p2h
 on: workflow_dispatch
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
-      - run: echo " Event: ${{ github.event_name }}; Runner: ${{ runner.os }}; Branch: ${{ github.ref }}; Repository: ${{ github.repository }}."
+      - run: echo "Event ${{ github.event_name }}; Runner ${{ runner.os }}; Branch ${{ github.ref }}; Repository ${{ github.repository }}."
       - name: Check out repository code
         uses: actions/checkout@v4
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
