--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.npm
-          key: node-modules=${{ hashFiles('**/package-lock.json') }}
+          key: node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependecies
         run: npm ci
           npm install --save-dev @babel/plugin-proposal-private-property-in-object --legacy-peer-deps
