--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -25,5 +25,10 @@ jobs:
           ls ${{ github.workspace }}
       - name: Build application
         run: npm run build
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          path: build
+          name: build-files
       - name: Deploy
         run: echo Deploying...
