--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -2,7 +2,7 @@ name: p2h Github Actions CI/CD
 run-name: GitHub Actions for p2h
 on: [push, workflow_dispatch]
 jobs:
-  deploy:
+  test:
     runs-on: ubuntu-latest
     steps:
       - run: echo "Event ${{ github.event_name }}; Runner ${{ runner.os }}; Branch ${{ github.ref }}; Repository ${{ github.repository }}."
@@ -23,6 +23,22 @@ jobs:
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
+
+  build:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - run: echo "Event ${{ github.event_name }}; Runner ${{ runner.os }}; Branch ${{ github.ref }}; Repository ${{ github.repository }}."
+      - name: Check out repository code
+        uses: actions/checkout@v4
+      - name: Cache deps
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: node-modules-${{ hashFiles('**/package-lock.json') }}
+      - name: Install dependecies
+        run: npm ci
+          npm install --save-dev @babel/plugin-proposal-private-property-in-object --legacy-peer-deps
       - name: Build application
         run: npm run build
       - name: Upload Artifact
@@ -30,5 +46,13 @@ jobs:
         with:
           path: build
           name: build-files
-      - name: Deploy
-        run: echo Deploying...
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - run: echo "Event ${{ github.event_name }}; Runner ${{ runner.os }}; Branch ${{ github.ref }}; Repository ${{ github.repository }}."
+      - name: Get built project
+        uses: actions/download-artiact@v4
+        with:
+          name: build-files
