--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "p2h",
+  "name": "Path to heaven Game",
   "icons": [
     {
       "src": "img.dragon.ico",
